fixed alignment

--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -25,7 +25,6 @@ $calBlackLight: rgb(33,33,33);
 	//width: 15.625em;
 	height: 16.25em;
 	margin: 0 auto;
-	//position: relative;
 }
 
 .cal {
@@ -222,7 +221,7 @@ $calBlackLight: rgb(33,33,33);
 			margin-top: -15px;
 			margin-left: -5px;
 			margin-right: 100px;
-			width: 100%;
+			width: 102%;
 			height: 18em; /* 288px */
 		}
 		.cal {
@@ -261,7 +260,7 @@ $calBlackLight: rgb(33,33,33);
 	}
 
 .cal-date-contents {
-	width: 100%;
+	width: 102%;
 	margin-left: -30px;
 }
 
@@ -361,7 +360,7 @@ $calBlackLight: rgb(33,33,33);
 }
 
 .mobile_body {
-	width: 101%;
+	width: 100%;
 }
 
 .mobile_button_block {
@@ -371,8 +370,9 @@ $calBlackLight: rgb(33,33,33);
 }
 
 .mobile_container {
+	margin: 0;
+	padding: 0;
 	width: 100%;
-	height: 100%;
 }
 
 #mobile_logo {
@@ -387,10 +387,10 @@ $calBlackLight: rgb(33,33,33);
 .mobile_content_wrapper {
   margin-top: -20px;
   width: 100%;
-  background-color: $grayLightest;
   background: url(/pw_maze_white.png) repeat 0 0;
   padding-bottom: 60px;
   padding-top: 12px;
+
 }
 
 .mobile_workorder_form {
@@ -466,9 +466,4 @@ $calBlackLight: rgb(33,33,33);
 	border-bottom-right-radius: 5px;
 	border: 1px solid #bbb;
 	padding: 1px;
-}
-
-.calendar_mobile {
-	margin-top: 10px;
-	padding: 50px;
 }
